more styling, fixed overflow issues

--- a/app/assets/stylesheets/api/dropdown.scss
+++ b/app/assets/stylesheets/api/dropdown.scss
@@ -7,6 +7,7 @@
   border: none;
   cursor: pointer;
   padding: 0 1rem;
+  outline: none;
 }
 
 .dropbtn:hover,
@@ -59,6 +60,13 @@
 }
 
 .currentchannel-div {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+  white-space: nowrap;
+}
+
+.top-dropdown-div {
   line-height: 1.075rem;
   margin-bottom: -2px;
   margin-top: 0.5625rem !important;
@@ -67,5 +75,4 @@
   font-weight: 900;
   color: #fff;
   width: 100%;
-  overflow-x: hidden;
 }
